; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_core/extr_mlx5_cmd.c_alloc_token.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_core/extr_mlx5_cmd.c_alloc_token.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_cmd = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.mlx5_cmd*)* @alloc_token to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @alloc_token(%struct.mlx5_cmd* %0) #0 {
  %2 = alloca %struct.mlx5_cmd*, align 8
  %3 = alloca i64, align 8
  store %struct.mlx5_cmd* %0, %struct.mlx5_cmd** %2, align 8
  %4 = load %struct.mlx5_cmd*, %struct.mlx5_cmd** %2, align 8
  %5 = getelementptr inbounds %struct.mlx5_cmd, %struct.mlx5_cmd* %4, i32 0, i32 1
  %6 = call i32 @spin_lock(i32* %5)
  %7 = load %struct.mlx5_cmd*, %struct.mlx5_cmd** %2, align 8
  %8 = getelementptr inbounds %struct.mlx5_cmd, %struct.mlx5_cmd* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = add nsw i64 %9, 1
  store i64 %10, i64* %8, align 8
  %11 = load %struct.mlx5_cmd*, %struct.mlx5_cmd** %2, align 8
  %12 = getelementptr inbounds %struct.mlx5_cmd, %struct.mlx5_cmd* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %1
  %16 = load %struct.mlx5_cmd*, %struct.mlx5_cmd** %2, align 8
  %17 = getelementptr inbounds %struct.mlx5_cmd, %struct.mlx5_cmd* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = add nsw i64 %18, 1
  store i64 %19, i64* %17, align 8
  br label %20

20:                                               ; preds = %15, %1
  %21 = load %struct.mlx5_cmd*, %struct.mlx5_cmd** %2, align 8
  %22 = getelementptr inbounds %struct.mlx5_cmd, %struct.mlx5_cmd* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  store i64 %23, i64* %3, align 8
  %24 = load %struct.mlx5_cmd*, %struct.mlx5_cmd** %2, align 8
  %25 = getelementptr inbounds %struct.mlx5_cmd, %struct.mlx5_cmd* %24, i32 0, i32 1
  %26 = call i32 @spin_unlock(i32* %25)
  %27 = load i64, i64* %3, align 8
  ret i64 %27
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
